k8s/app/base/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: joke-app
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics" 
        prometheus.io/port: "3000"
    spec:
      containers:
      - name: backend
        image: ${DOCKER_USERNAME}/joke-backend:${VERSION}
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: "0.3"
            memory: "256Mi"
          requests:
            cpu: "0.1"
            memory: "128Mi"
        securityContext:
          readOnlyRootFilesystem: false  # Mantido false porque precisa escrever no SQLite
          runAsNonRoot: true
          runAsUser: 1000
          allowPrivilegeEscalation: false
        volumeMounts:
        - name: sqlite-data
          mountPath: /data
      volumes:
      - name: sqlite-data
        persistentVolumeClaim:
          claimName: sqlite-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: joke-app
spec:
  selector:
    app: backend
  ports:
  - port: 3000
    targetPort: 3000
  type: ClusterIP
