k8s/app/base/api-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: joke-app-api-ingress
  namespace: joke-app
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.middlewares: joke-app-api-strip@kubernetescrd
    # Anotações de segurança adicionadas
    traefik.ingress.kubernetes.io/ssl-redirect: "true"
    traefik.ingress.kubernetes.io/ssl-permanent-redirect: "true"
    # Definindo rate limit para evitar abuso da API
    traefik.ingress.kubernetes.io/rate-limit: |
      {
        "average": 100,
        "burst": 50
      }
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - www.labk3s.online
    secretName: labk3s-tls
  rules:
  - host: www.labk3s.online
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 3000
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: api-strip
  namespace: joke-app
spec:
  stripPrefix:
    prefixes:
      - /api
